--- a/www/public/.htaccess
+++ b/www/public/.htaccess
@@ -18,5 +18,6 @@ RewriteEngine On
 
 RewriteRule ^api/lat/(.+)/lng/(.+)/$ api/temp_by_latlng.php?lat=$1&lng=$2
 RewriteRule ^api/city/([a-zA-Z]+)$ api/temp_by_city.php?city=$1
+RewriteRule ^api/cityid/([0-9]+)$ api/temp_by_city.php?id=$1
 
 RewriteRule ^api/citylist*$ api/list_cities.php
