--- a/ios/yesterdaysweather/yesterdaysweather/yesterdaysweather-Info.plist
+++ b/ios/yesterdaysweather/yesterdaysweather/yesterdaysweather-Info.plist
@@ -28,8 +28,10 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIStatusBarHidden</key>
+	<true/>
 	<key>UIStatusBarStyle</key>
-	<string>UIStatusBarStyleBlackOpaque</string>
+	<string>UIStatusBarStyleBlackTranslucent</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
